; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_write_lastdir.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_write_lastdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@cfgdir = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"/.lastd\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"cd \22%s\22\00", align 1
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @write_lastdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_lastdir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i32, i32* @TRUE, align 4
  store i32 %6, i32* %3, align 4
  %7 = load i64, i64* @cfgdir, align 8
  %8 = call i64 @strlen(i64 %7)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* @cfgdir, align 8
  %10 = load i64, i64* %4, align 8
  %11 = add i64 %9, %10
  %12 = call i32 @xstrlcpy(i64 %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 8)
  %13 = load i64, i64* @cfgdir, align 8
  %14 = call i32 @DPRINTF_S(i64 %13)
  %15 = load i64, i64* @cfgdir, align 8
  %16 = call i32* @fopen(i64 %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %16, i32** %5, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %29

19:                                               ; preds = %1
  %20 = load i32*, i32** %5, align 8
  %21 = load i8*, i8** %2, align 8
  %22 = call i64 @fprintf(i32* %20, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8* %21)
  %23 = icmp slt i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %19
  %25 = load i32, i32* @FALSE, align 4
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %24, %19
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @fclose(i32* %27)
  br label %31

29:                                               ; preds = %1
  %30 = load i32, i32* @FALSE, align 4
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %29, %26
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i64 @strlen(i64) #1

declare dso_local i32 @xstrlcpy(i64, i8*, i32) #1

declare dso_local i32 @DPRINTF_S(i64) #1

declare dso_local i32* @fopen(i64, i8*) #1

declare dso_local i64 @fprintf(i32*, i8*, i8*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
